# cpp_pong

./: CMakeLists.txt  README.md  vcpkg.json
include/: config.hpp  factory.hpp  game.hpp
include/components/: drawable.hpp  geometry.hpp  physics.hpp  pong.hpp  to_destroy.hpp
include/events/: input_event.hpp  score_event.hpp
include/systems/: ball_system.hpp  border_check_system.hpp  cleanup_system.hpp  collision_system.hpp  event_system.hpp  paddle_movement_system.hpp  physics_system.hpp  render_system.hpp  score_system.hpp  spawn_system.hpp
src/: factory.cpp  game.cpp  main.cpp
src/systems/: ball_system.cpp  border_check_system.cpp  cleanup_system.cpp  collision_system.cpp  event_system.cpp  paddle_movement_system.cpp  physics_system.cpp  render_system.cpp  score_system.cpp  spawn_system.cpp
